fix(gq): fix z-index to display tooltip correctly (GQUOTE-4259) (#6165)

--- a/apps/gq/src/styles.scss
+++ b/apps/gq/src/styles.scss
@@ -180,7 +180,9 @@ gq-kpi-status-card {
       @apply border-t-4;
     }
   }
-
+  .mat-mdc-tab-label-container {
+    z-index: 0;
+  }
   .mat-mdc-tab-labels {
     @apply justify-between;
     @apply flex;
